# hecatomb

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  TODO.reformat  index.html
cmake/: Config.cmake  wes.c
cmake/modules/: FindVORBIS.cmake  TargetArch.cmake
cmake/toolchains/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
extlibs/libs/mingw/x64/: libogg.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la
extlibs/libs/mingw/x86/: libogg.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la
extlibs/libs/osx/libjpeg.framework/Versions/A/: libjpeg
extlibs/libs/osx/libjpeg.framework/Versions/A/Resources/: Info.plist
src/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/generic/: dlmalloc.c  glew.c  hunk.c  qal.c  qgl.c  vid.c
src/backends/sdl/: cd.c  input.c  refresh.c  sound.c
src/backends/sdl_osx/: SDLMain.m
src/backends/unix/: hunk.c  main.c  network.c  signalhandler.c  system.c
src/backends/unix/shared/: hunk.c
src/backends/windows/: hunk.c  icon.rc  main.c  network.c  system.c
src/backends/windows/shared/: mem.c
src/client/: CMakeLists.txt  cl_cin.c  cl_console.c  cl_download.c  cl_effects.c  cl_entities.c  cl_input.c  cl_inventory.c  cl_keyboard.c  cl_lights.c  cl_main.c  cl_network.c  cl_parse.c  cl_particles.c  cl_prediction.c  cl_screen.c  cl_tempentities.c  cl_view.c
src/client/menu/: menu.c  qmenu.c  videomenu.c
src/client/sound/: ogg.c  openal.c  sound.c  wave.c
src/common/: CMakeLists.txt  argproc.c  clientserver.c  cmdparser.c  collision.c  crc.c  cvar.c  features.c  filesystem.c  glob.c  hunk.c  md4.c  memory.c  misc.c  movemsg.c  netchan.c  pmove.c  szone.c  zone.c
src/common/shared/: flash.c  rand.c  shared.c
src/common/unzip/: ioapi.c  unzip.c
src/game/: CMakeLists.txt  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c
src/game/header/: local.h
src/game/monster/berserker/: berserker.c
src/game/monster/boss2/: boss2.c
src/game/monster/boss3/: boss3.c  boss31.c  boss32.c
src/game/monster/brain/: brain.c
src/game/monster/chick/: chick.c
src/game/monster/flipper/: flipper.c
src/game/monster/float/: float.c
src/game/monster/flyer/: flyer.c
src/game/monster/gladiator/: gladiator.c
src/game/monster/gunner/: gunner.c
src/game/monster/hover/: hover.c
src/game/monster/infantry/: infantry.c
src/game/monster/insane/: insane.c
src/game/monster/medic/: medic.c
src/game/monster/misc/: move.c
src/game/monster/mutant/: mutant.c
src/game/monster/parasite/: parasite.c
src/game/monster/soldier/: soldier.c
src/game/monster/supertank/: supertank.c
src/game/monster/tank/: tank.c
src/game/player/: client.c  hud.c  trail.c  view.c  weapon.c
src/game/savegame/: savegame.c
src/include/: CMakeLists.txt  client.h  config.h.in  filesystem.h  game.h  memory.h  prereqs.h  server.h  system.h
src/include/backend/generic/: al.h  gl.h  glwindow.h  input.h  qal.h  qgl.h  sdl.h
src/include/backend/unix/: glxew.h  prereqs.h  unix.h
src/include/backend/windows/: prereqs.h  winquake.h
src/include/client/: client.h  console.h  input.h  keyboard.h  ref.h  screen.h  vid.h
src/include/client/menu/: qmenu.h
src/include/client/sound/: cdaudio.h  local.h  sound.h  vorbis.h
src/include/common/: common.h  crc.h  files.h  glob.h  shared.h  zone.h
src/include/common/unzip/: ioapi.h  unzip.h
src/include/game/: local.h
src/include/game/savegame/tables/: gamefunc_decs.h
src/include/icon/: q2icon.xbm
src/include/refresh/: local.h  model.h
src/include/server/: server.h
src/include/windows/: prereqs.h
src/refresh/: CMakeLists.txt  r_draw.c  r_image.c  r_light.c  r_lightmap.c  r_main.c  r_mesh.c  r_misc.c  r_model.c  r_scrap.c  r_surf.c  r_warp.c
src/refresh/files/: jpeg.c  md2.c  pcx.c  sp2.c  tga.c  wal.c
src/server/: CMakeLists.txt  sv_cmd.c  sv_conless.c  sv_entities.c  sv_game.c  sv_init.c  sv_main.c  sv_save.c  sv_send.c  sv_user.c  sv_world.c
